--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
     <div x-data="{
         search: '',
         items: [
-    { id: 'NN', label: 'lorem' },
-    { id: 'NK', label: 'ipsum' },
-    { id: 'NM', label: 'dolor' },
+    { id: 'NK', label: 'Nicht klingen' },
+    { id: 'NR', label: 'Nicht reingen' },
+    { id: 'P', label: 'Preismerkmal' },
+    { id: 'PF', label: 'Beim Pförner melden' },
+    { id: 'PT', label: 'Personaltaxi, meist auch Gaststätten' },
+    { id: 'RA', label: 'Reklamationauftrag' },
+    { id: 'SIX', label: 'Sixtauftrag' },
+    { id: 'NK', label: 'Nicht klingen' },
+    { id: 'NN', label: 'Großraumtaxi' },
     { id: 'TY', label: 'Toyota' },            
     <!-- hier mehr einfuegen] -->
     ], 
