--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         h1 {text-align: center;}
     </style>
-    <title>Taxi Kürzel München</title>
+    <title>Taxi Kürzel Isarfunk</title>
 </head>
 
 <body>
