--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <main class="container">
-    <h1>Taxi Kürzel München</h1>
+    <h1>Taxi Kürzel Isarfunk</h1>
     <div x-data="{
         search: '',
         items: [
