--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
     { id: 'PT', label: 'Personaltaxi, meist auch Gaststätten' },
     { id: 'RA', label: 'Reklamationauftrag' },
     { id: 'SIX', label: 'Sixtauftrag' },
+    { id: 'T', label: 'T-Booker, per Schnellwahl bestellt' },           
+    { id: 'T1', label: 'Abholung Terminal 1' },            
+    { id: 'T2', label: 'Abholung Terminal 2' },                 
     { id: 'NK', label: 'Nicht klingen' },
     { id: 'NN', label: 'Großraumtaxi' },
+    { id: 'TY', label: 'Toyota' },
     { id: 'TY', label: 'Toyota' },            
     <!-- hier mehr einfuegen] -->
     ], 
