--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             { id: '???', label: 'Später' }
             ],
             flughafen: [
-            { id: 'Lufthansa', label: 'LH - Terminal 2' },            
+            { id: 'LH - Lufthansa', label: 'Terminal 2' },            
             { id: 'Air France', label: 'AF - Terminal 1 Modul D' },
             { id: 'Turkish Airlines', label: 'TK - Terminal 1 Modul C' }      
             ],
