--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             ],
             flughafen: [
             { id: 'LH - Lufthansa', label: 'Terminal 2' },            
-            { id: 'Air France', label: 'AF - Terminal 1 Modul D' },
+            { id: 'AF - Air France', label: 'AF - Terminal 1 Modul D' },
             { id: 'Turkish Airlines', label: 'TK - Terminal 1 Modul C' }      
             ],
             get filteredItems() {
