--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             { id: '???', label: 'Später' }
             ],
             flughafen: [
-            { id: 'LH - Lufthansa', label: 'Terminal 2' },            
-            { id: 'AF - Air France', label: 'AF - Terminal 1 Modul D' },
-            { id: 'Turkish Airlines', label: 'TK - Terminal 1 Modul C' }      
+            { id: 'Lufthansa         ', label: 'LH - Terminal 2' },            
+            { id: 'Air France        ', label: 'AF - Terminal 1 Modul D' },
+            { id: 'Turkish Airlines  ', label: 'TK - Terminal 1 Modul C' }      
             ],
             get filteredItems() {
                 if(selectedOption === 'taxi') {
