--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="container">
         <h1>Taxi Kürzel Isarfunk</h1>
         
-        <div x-data="{ selectedOption: 'taxi', 
+        <div x-data="{ selectedOption: 'Isarfunk-Kürzel', 
         options: [ 
         'Isarfunk-Kürzel',
         'Abflug-Modul', 
@@ -56,7 +56,7 @@
             { id: 'UV ', label: 'Unverbindlicher Auftrag' },          
             { id: 'VB ', label: 'Vorbestellung' },        
             { id: 'VS ', label: 'Krankenkasse ist Kostenträger' }, 
-            { id: 'WU ', label: 'Kunde war bei der Bestellung schon draussen' },         
+            { id: 'WU ', label: 'Kunde war bei der Bestellung schon draussen' }         
             
             ],
             Fahrzeugmerkmale: [
