--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         h1 {text-align: center;}
     </style>
-    <title>Taxi Kürzel Isarfunk, Abflug Moduls</title>
+    <title>Kürzel Isarfunk, Abflug Moduls</title>
 </head>
 
 <body>
